# dirp

./: Cargo.toml  README.md  build.sh  run.sh
src/: main.rs
